victoria-metrics/HTTPRoute.alertmanager.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: victoria-metrics
spec:
  hostnames:
    - alertmanager.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vmalertmanager-victoria-metrics
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
